# SoS

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  README.md  cmake_install.cmake  install.sh  main.c  sos  test.sh
include/: asm.h  boolExpr.h  bool_expr.h  compilation.h  labels.h  listIden.h  listInstructionMips.h  listPorteeVar.h  listRangeVar.h  listTmp.h  marker.h  memory.h  utils.h  variable.h
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
mips/: concat.asm  functions.asm  functions.asm.c  functions.asm.h  header.asm.c  header.asm.h
mips/functions/: atoi.asm.c  atoi.asm.h  bufferLen.asm.c  bufferLen.asm.h  bufferWrite.asm.c  bufferWrite.asm.h  displayString.asm.c  displayString.asm.h  errorManager.asm.c  errorManager.asm.h  intToString.asm.c  intToString.asm.h  loadRegistersFromStack.asm.c  loadRegistersFromStack.asm.h  saveRegistersToStack.asm.c  saveRegistersToStack.asm.h  strcmp.asm.c  strcmp.asm.h
src/: asm.c  compilation.c  labels.c  listIden.c  listInstructionMips.c  listRangeVar.c  listTmp.c  marker.c  memory.c  utils.c
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compilation-test.c  full_test.sh  listIden-test.c  listIdentifierOrder-test.c  listInstructionMips-test.c  listRangeVar-test.c  listTmp-test.c  test-test.c
tests/compilation/: compil_array_undeclared.sos  compil_array_under_0.sos  compil_divide_0.sos  compil_function_expr_return.sos  compil_function_not_enough_args.sos  compil_function_string_return.sos  compil_local_ident_called_outside_function.sos  compil_max_int.sos  compil_undefined_function.sos  compil_unknown_identifier.sos  compil_word_assign.sos
tests/expected_result/benchmark/: 00-echo_result  04-conversion-entier-chaine_result  05-tableau_result  18-for-while_result  19-for-case_result  20-fonction-args_result  24-fonction-recursive_result
tests/expected_result/concatenation/: concat_ident_on_ident_result  concat_ident_word_number_result
tests/expected_result/conditional_test_block/: test_basic_negation_result
tests/expected_result/expression/: expr_basic_division_result  expr_basic_modulo_result  expr_basic_multiplication_result  expr_ident_add_mult_priority_result  expr_ident_mult_div_priority_result  expr_ident_subs_mult_priority_result  expr_ident_substraction_result  expr_ident_unary_minus_result
tests/expected_result/fizzbuzz/: test_fizzbuzz_result
tests/expected_result/for/: test_for_on_list_multiple_ident_result  test_for_with_if_result
tests/expected_result/function/: test_function_array_access_result  test_function_array_declare_result  test_function_basic_echo_result  test_function_basic_until_result  test_function_glob_var_nested_while_outside_result  test_function_glob_var_nested_while_result  test_function_if_result  test_function_local_var_nested_while_outside_result  test_function_modif_arguments_result  test_function_nested_while_if_result  test_function_recursive_result  test_function_res_result  test_function_simple_arguments_result
tests/expected_result/general_test_block/: test_basic_equal_concat_result
tests/expected_result/if/: test_if_elif_result
tests/expected_result/relational_test_block/: test_basic_relat_ge_result
tests/expected_result/test_block/: test_basic_relat_le_result
tests/expected_result/until/: test_basic_until_with_if_result  test_global_var_nested_until_result  test_local_var_nested_until_integer_result
tests/expected_result/while/: test_global_var_nested_while_result  test_local_var_nested_while_integer_result  test_local_var_nested_while_string_result
tests/runtime/: basic.sos  bool_expr.sos  concatenation.sos  example1.sos  example2.sos  fct.sos  fct2.sos  identifier_with_affectation.sos  quentin.sos  read.sos  simpl_operation.sos  simple_arithmetics.sos  table.sos
tests/runtime/array/: test_array_assign.sos  test_array_assign_expression.sos  test_array_copy_and_edit.sos  test_array_double_array.sos  test_array_index_variable.sos  test_array_outside_range.sos  test_array_reassign.sos
tests/runtime/assign/: assign_integer.sos  assign_long_ident.sos  assign_string.sos
tests/runtime/benchmark/: 15-case.sos  21-fonction-statut.sos  22-fonction-resultat.sos
tests/runtime/concatenation/: concat_basic_chain.sos  concat_basic_expr.sos  concat_basic_number.sos  concat_basic_word.sos  concat_ident_number.sos  concat_ident_on_ident.sos  concat_ident_word.sos  concat_ident_word_number.sos
tests/runtime/conditional_test_block/: test_basic_and_string.sos  test_basic_mix_and_or_integer.sos  test_basic_mix_and_or_parenthesis.sos  test_basic_mix_and_or_priority.sos  test_basic_negation.sos  test_basic_nested_negation_integer.sos  test_basic_or_integer.sos  test_basic_or_string.sos  test_basic_without_parenthesis.sos  test_ident_and_integer.sos  test_ident_and_string.sos  test_ident_or_integer.sos  test_ident_or_string.sos  test_ident_without_parenthesis.sos  test_short_circuit_with_function.sos
tests/runtime/expression/: expr_basic_addition.sos  expr_basic_division.sos  expr_basic_modulo.sos  expr_basic_multiplication.sos  expr_basic_substraction.sos  expr_ident_add_mult_priority.sos  expr_ident_addition.sos  expr_ident_addition_on_concat.sos  expr_ident_addition_on_negative.sos  expr_ident_mult_div_priority.sos  expr_ident_subs_mult_priority.sos  expr_ident_substraction.sos  expr_ident_unary_minus.sos  expr_ident_unary_plus.sos  expr_ident_unary_plus_on_unary_minus.sos  expr_string_arith.sos
tests/tmp/: concat_ident_word_number_result  expr_basic_modulo_result  expr_basic_multiplication_result  test_basic_equal_concat_result  test_basic_equal_integer_result  test_basic_equal_string_result  test_basic_n_param_result  test_basic_relat_eq_result
(+64 files in other folders)
